Name generator init

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Super Generator</title>
+
+        <script src="generator.js"></script>
     </head>
     <body>
         <h1>This is a text, hur hur</h1>
+        <p>Write your first name here, I tell you what is your last name.</p>
+
+            <input type="text" id="firstName">
+            <button onclick="addLastName()">Can you handle?</button>
+
+        <p id="answer"></p>
+
     </body>
 </html>
