--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Super Generator</title>
 
         <script src="generator.js"></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>This is a text, hur hur</h1>
